# Domer-Rover-2024-25-Auton-Code

./: .gitignore  Dockerfile  README.md  detectMarkers.py  generateMarkers.py  joystickDriving.py  joystickReceiver.py  obj_det.py  testDrive1  testDrive2  testDriveServer
.dm_env/: pyvenv.cfg
.dm_env/Scripts/: activate  activate.bat
archive/: joystickReceiver.py  test_motor.py
camera_vision/: simple_video.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_list
radio_comms/: README.md  cam_stream.py  server_zmq.py  video_client_so.py  video_server_prev.py  video_server_so.py
radio_comms/controls_over_bullets_files/: capture_controls.py  recv_controls.py  send_controls.py
radio_comms/controls_test_transmission/: base_station_test.py  rover_test.py
radio_comms/heartbeat_sensor_files/: heartbeat_base_station.py  heartbeat_rover.py
radio_comms/hieroglyphics/: .gitignore  1-28_reception_testing.py  2_4_dfm_master_process_base.py  README.md  capture_controls.py  capture_controls.py~  master_process_base.py  master_process_base_2-25.py  master_process_rover.py  master_process_rover_2-25.py  message.py  message_dfm_1-28.py  message_manager.py  scheduler.py  split_tester.py  tester_1.py
radio_comms/info_over_bullets_files/: .recv_controls.py.swp  .send_controls.py.swp  base_station_video.py  capture_controls.py  markers_base_station.py  markers_rover_video.py  multi-camera-feed.py  recv_controls.py  rep_photo  req_photo  rover_video.py  send_controls.py
radio_comms/mavlink_test_files/: base_station_mavlink.py  rover_mavlink.py
radio_comms/practice_files/: base_station_zmq.py  cam_stream.py  client2.py  client_zmq.py  rover_zmq.py  server2.py  server_zmq.py  video_client_prev.py
radio_comms/pseudo_login_900_files/: pseudologin_rover.py  (+1 more)
ws/: serial_comm.py
ws/src/custom_hardware/: CMakeLists.txt  custom_hardware.cpp  custom_hardware.xml  package.xml
ws/src/custom_hardware/include/custom_hardware/: custom_hardware.hpp
(+579 files in other folders)
